test/TestSuite/Syntax/Errors/container_attribute.tjp
project test "Test" "1.0" 2008-02-03 +2m 

task m "M" {
  start ${projectstart}
}

task t "T" {
  start ${projectstart}
  task s "S"
# MARK: error 11 container_attribute 
  depends !m
}

